# track-system

./: .env.example  Cargo.toml  LICENSE  README.md  build.sh  run_coverage.sh
database/: track-system.db
migration/: Cargo.toml  README.md
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20251014_060104_create_packages.rs  m20251014_060133_create_commit_files.rs  m20251014_060133_create_commit_records.rs  m20251014_060133_create_distributed_locks.rs  m20251014_060133_create_distros.rs  m20251014_060133_create_spec_changes.rs  m20251014_060133_create_spec_snapshots.rs  m20251014_060133_create_tracking.rs  m20251014_070628_add_last_error_to_tracking.rs  m20251014_073426_add_commit_file_change_details.rs  m20251014_122500_add_app_release_layers.rs  m20251110_create_audit_logs.rs  m20251121_090001_drop_tracking_distro_fk.rs  m20251125_000001_add_spec_fields_to_commit_records.rs  m20251125_060001_rename_commit_records_to_l1.rs  m20251125_060002_create_l2_commit_records.rs  m20251127_000001_create_compare_reports.rs  m20260202_000001_add_platform_to_tracking.rs  m20260331_000001_create_ecosystem_targets.rs  m20260331_000002_create_ecosystem_bindings.rs  m20260331_000003_create_ecosystem_evidence_snapshots.rs  m20260331_000004_create_ecosystem_reports.rs  m20260416_000002_create_maintenance_evidence_snapshots.rs  m20260416_000003_create_maintenance_reports.rs  main.rs
packaging/: Dockerfile.build
packaging/logrotate/: track-system
packaging/systemd/: track-system.service
spec/: track-system.spec
src/: i18n.rs  lib.rs  main.rs
src/ai/: client.rs  config.rs  mod.rs  prompt.rs  service.rs  types.rs
src/analyzer/: change_classifier.rs  mod.rs  types.rs
src/backport_advisor/: advisor.rs  mod.rs
src/classifier_job/: mod.rs
src/cli/: dto.rs  mod.rs  parser.rs  services.rs
src/collectors/: adapters.rs  error.rs  mod.rs  traits.rs
src/component/: mod.rs
src/config/: mod.rs
src/diff/: comparison_service.rs  git_client.rs  mod.rs  types.rs
src/ecosystem/: assessor.rs  mod.rs  report.rs  sbom_sync.rs  service.rs  types.rs
src/entities/: audit_logs.rs  backport_candidates.rs  commit_files.rs  commit_records.rs  compare_reports.rs  distributed_locks.rs  distros.rs  ecosystem_bindings.rs  ecosystem_evidence_snapshots.rs  ecosystem_reports.rs  issue_events.rs  (+16 more)
(+143 files in other folders)
