[package]
name = "track-system"
version = "1.1.0"
edition = "2021"
authors = ["Yong Qin <qiny15@chinatelecom.cn>"]
description = "Automated source code repository tracking and analysis tool"

[workspace]
members = [".", "migration"]

[dependencies]
# Web 框架
axum = { version = "0.7", features = ["macros"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }

# 异步运行时
tokio = { version = "1", features = ["full"] }

# SeaORM
sea-orm = { version = "^1.0", features = [
    "sqlx-sqlite",
    "sqlx-postgres",
    "runtime-tokio-native-tls",
    "macros",
    "with-chrono",
    "with-json",
] }

# HTTP 客户端
reqwest = { version = "0.11", features = ["json"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
csv = "1.3"
calamine = "0.26"

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# 配置管理
dotenvy = "0.15"
config = "0.14"
dirs = "5.0"

# API 限流
governor = "0.6"

# 内存缓存
moka = { version = "0.12", features = ["future"] }

# 字符串相似度
strsim = "0.10"

# 正则表达式
regex = "1.10"

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 终端颜色输出
colored = "2.1"

# Git 操作（仅用于 L2 本地仓库）
git2 = "0.18"

# 任务调度
tokio-cron-scheduler = "0.9"

# 密码学（hash）
sha2 = "0.10"

# JWT 认证
jsonwebtoken = "9.2"
md5 = "0.7"

# 文件遍历
walkdir = "2.5"

# 异步 trait
async-trait = "0.1"

# Base64 编解码
base64 = "0.22"

# URL 编码
urlencoding = "2.1"

# 数据库迁移
migration = { path = "migration" }
clap = { version = "4.5.49", features = ["derive"] }
serde_yaml = "0.9.34"
tracing-appender = "0.2.4"
rust-i18n = "3.1.5"

[dev-dependencies]
# 测试工具
tokio-test = "0.4"
mockito = "1.2"
sea-orm = { version = "^1.0", features = ["mock"] }
tempfile = "3.10"
mockall = "0.12"
httpmock = "0.8.2"
serial_test = "2"

[features]
test-utils = []

[[bin]]
name = "track-server"
path = "src/bin/track_server.rs"

[[bin]]
name = "track-cli"
path = "src/bin/track_cli.rs"

[[bin]]
name = "track-collector"
path = "src/bin/track-collector.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
